# desafioMeliuz

./: Dockerfile  README.md  pyproject.toml
analisys/: data_analysis.ipynb
app/: clustering.py  constants.py  data_analysis.py  data_loader.py  main.py  recommender.py  strategies.py
data/: user_history.csv
tests/: test_data_loader.py  test_recommender.py  test_strategies.py
